--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,52 @@
+h1, h2, h3, p, button, input{
+  font-family: fantasy;
+}
+
+.container{
+  margin: 10%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: orange;
+  border-radius: 10px;
+  border-style: solid;
+}
+
+
+.buttons {
+  margin-top: 20px;
+  width: 300px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.buttons .guess {
+  background-color: green;
+  color: white;
+}
+
+.buttons .guess:hover{
+  background-color: lightgreen;
+}
+
+.buttons .restart:hover{
+  background-color: lightgoldenrodyellow;
+}
+
+.buttons .restart {
+  background-color: red;
+  color: black;
+}
+
+.buttons .guess, .restart{
+  width: 100px;
+  font-size: large;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
+}
+
 .win,
 .lose {
   display: none;
