CSS win en lose animation toegevoegd

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,30 @@ input {
   }
 }
 
+.lose-image {
+  width: 300px;
+  height: 300px;
+  animation-name: roll-in-left;
+  animation-duration: 1s;
+  animation-timing-function: ease;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: none;
+}
+@keyframes roll-in-left {
+  0% {
+    -webkit-transform: translateX(-800px) rotate(-540deg);
+    transform: translateX(-800px) rotate(-540deg);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0) rotate(0deg);
+    transform: translateX(0) rotate(0deg);
+    opacity: 1;
+  }
+}
+
 .win-animation {
   color: #3079ed;
   animation-name: focus-in-contract;
